hard-gists/3078764/run.log
=== Docker Run Log for 3078764 ===
Started at: Mi 29. Okt 13:39:31 CET 2025

[2025-10-29 13:39:32] START: Running container for 3078764
[2025-10-29 13:39:32] SUCCESS: Container 494ec8cda8f0617a2cf6445fec4fcbf88a188d360209293124e8b47782200af4 started for 3078764
=== Container logs for 3078764 ===
  File "/snippet.py", line 19
    print key
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3078764 ===
[2025-10-29 13:39:34] INFO: Container 494ec8cda8f0617a2cf6445fec4fcbf88a188d360209293124e8b47782200af4 has stopped
